# far-rs

./: Cargo.toml  LICENSE  README.md
src/: farlib.rs  main.rs
