[package]
name = "far"
description = "CLI tool for FAR archives"
version = "0.1.0"
edition = "2021"
authors = ["husky (fekhesk)"]
homepage = "https://gitlab.com/realmicrosoft/far-rs"
repository = "https://gitlab.com/realmicrosoft/far-rs"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libfar = "0.1.1"